--- a/ARFoodFinder/Info.plist
+++ b/ARFoodFinder/Info.plist
@@ -11,7 +11,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Scout AR</string>
+	<key>CFBundleDisplayName</key>
+	<string>Scout AR</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
